-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8, 11, 12
-
Component/s: client-libs
-
Environment:
Redhat Enterprise Linux 7 x64
-
b26
-
x86_64
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8246601 | 13.0.4 | Dmitry Batrak | P4 | Resolved | Fixed | b04 |
| JDK-8242764 | 11.0.8-oracle | Dmitry Batrak | P4 | Resolved | Fixed | b03 |
| JDK-8237907 | 11.0.7 | Dmitry Batrak | P4 | Resolved | Fixed | b01 |
| JDK-8275271 | openjdk8u322 | Dmitry Batrak | P4 | Resolved | Fixed | b01 |
Many Japanese and Chinese fonts don't have Oblique style glyph, and algorithmic styling is used.
When we print characters with algorithmic Italic style and AlphaComposite, the characters leaned opposite angle (top-left to bottom-right).
This problem occurs only for printing, not on screen.
At the beginning, I thought it's FreeType library's problem and reported it to them.
https://savannah.nongnu.org/bugs/index.php?54565
But, they indicated their behavior was correct because Java code mirrored the image instead of 180 degree rotation.
Recreate steps:
1. Download and install IPAMincho font.
2. Compile and launch the attached sample code, Outline.java.
3. Mark "Print to File" checkbox
4. Print
5. Check out.ps file
When we print characters with algorithmic Italic style and AlphaComposite, the characters leaned opposite angle (top-left to bottom-right).
This problem occurs only for printing, not on screen.
At the beginning, I thought it's FreeType library's problem and reported it to them.
https://savannah.nongnu.org/bugs/index.php?54565
But, they indicated their behavior was correct because Java code mirrored the image instead of 180 degree rotation.
Recreate steps:
1. Download and install IPAMincho font.
2. Compile and launch the attached sample code, Outline.java.
3. Mark "Print to File" checkbox
4. Print
5. Check out.ps file
- backported by
-
JDK-8237907 Algorithmic Italic font leans opposite angle in Printing
-
- Resolved
-
-
JDK-8242764 Algorithmic Italic font leans opposite angle in Printing
-
- Resolved
-
-
JDK-8246601 Algorithmic Italic font leans opposite angle in Printing
-
- Resolved
-
-
JDK-8275271 Algorithmic Italic font leans opposite angle in Printing
-
- Resolved
-
- duplicates
-
JDK-8247293 Rotated text does not italicize correctly in JDK 11 with added Fonts folder with lucida fonts
-
- Closed
-
- relates to
-
JDK-8300014 Some backports placed the tests in the wrong location
-
- Resolved
-
(1 relates to)