8210058: Algorithmic Italic font leans opposite angle in Printing

Reviewed-by: prr, jdv, psadhukhan